# substreams-starknet-fork

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: lint.yaml  release.yml
codegen/: Cargo.toml
codegen/src/: main.rs
proto/: zklend.starknet.type.v1.proto
substreams-starknet/: Cargo.toml
substreams-starknet/src/: types.rs
