[package]
name = "substreams-starknet"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/substreams-starknet"
repository = "https://github.com/starknet-graph/substreams-starknet"
description = "Rust library for Starknet substreams development"
exclude = [".github/**"]

[dependencies]
prost = "0.11.9"
